# Relax-Model

./: .gitignore  README_zh.md  environment-videomae2.yml  environment.yml  launch-adaptive-control.cmd  pyproject.toml  start-adaptive-control.ps1
artifacts/legacy/: README.md  manifest.json
artifacts/reports/: realtime_multimodal_window_model_card.json
configs/: adaptive-control.yaml  base.yaml  local.example.yaml  project.yaml
configs/adaptive_models/classical_condition_current/: manifest.json
configs/adaptive_models/realtime_multimodal_window_v1/: manifest.json
configs/experiments/: research-hp-audit.yaml  research-minimal-dcnn.yaml  research-minimal-ridge.yaml  research-video.yaml  runtime-classical.yaml
data/: README.md
data/contracts/: features.md  input_tables.md  labels.md  outputs.md
integrations/unity/: PROTOCOL.md  RtmlShadowUdpBridge.cs
scripts/: consolidate_reports.py  export_legacy_manifest.py  setup_videomae2.ps1  smoke_run.ps1
src/real_time_ml/: __init__.py  __main__.py  cli.py  schema.py  utils.py
src/real_time_ml/adaptive_control/: __init__.py  contracts.py  models.py  physio_monitor.py  policy.py  service.py  settings.py
src/real_time_ml/config/: __init__.py  (+2 more)
tests/: test_adaptive_control.py  test_condition_level_data.py  test_csv_dialects.py  test_data_contracts.py  test_dcnn.py  test_egocentric_video.py  test_features_and_policy.py  test_layered_config.py  test_minimal_fusion.py  test_minimal_fusion_dcnn.py  test_minimal_fusion_dcnn_hp.py  test_real_data_integration.py  test_video_relaxation.py  test_windows_and_schema.py
(+65 files in other folders)
