[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-ml"
version = "0.1.0"
description = "P002-P016 multimodal 10-second shadow inference pipeline"
readme = "README_zh.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "pandas>=2.1,<3",
  "pyarrow>=14,<22",
  "PyYAML>=6,<7",
  "openpyxl>=3.1,<4",
  "pyxdf>=1.16,<2",
  "mne>=1.6,<2",
  "scikit-learn>=1.4,<2",
  "joblib>=1.3,<2",
  "opencv-python-headless>=4.9,<5",
  "pylsl>=1.16,<2",
]

[project.optional-dependencies]
ecg = ["neurokit2>=0.2.7,<1"]
head = ["ahrs>=0.3.1,<1"]
clip = ["torch>=2.1", "transformers>=4.38"]
dcnn = ["torch>=2.7,<3"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.5,<1"]

[project.scripts]
rtml = "real_time_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: reads participant source data",
  "slow: full-data or model training test",
]

[tool.ruff]
line-length = 100
target-version = "py311"
